# HSNPhira

./: .env.development  .gitignore  .gitmodules  AI-Ready System Spec.md  LICENSE  Mapping.md  Original Spec.md  README.en.md  README.md  README.md.bak  account.html  admin.html  admin_panel.html  api.py  build.sh  cmp.md  cmp.py  command.py  env.sh  file.py  header.html  header_old.vue  index.html  package.json  pnpm-lock.yaml  privacy.html  prompt.md  rank.md  rank.py  ranks.html  room.py  rooms.html  server_admin.html  start.sh  tailwind.config.js  top.html  topchart.md  topchart.py  topchart.py.bak  tsconfig.json  (+4 more)
HSN-CMP/: loader.py  requirements.txt
HSNPM/: .env.backup  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
HSNPM/src/: main.rs
back/: room.py  user_info.json
backend/: README.md  gen_requirements.sh  main.py  pyproject.toml  start_logprocessor.sh
backend/app/: __init__.py  cli.py  common.py  config.py  extensions.py
backend/app/auth/: __init__.py  models.py  routes.py  schemas.py  services.py
backend/app/common/: __init__.py  concurrent.py  database.py  decorators.py  error.py  schema.py  schema_base.py
backend/app/rooms/: __init__.py  routes.py  service.py  services.py
backend/migrations/versions/: 24f60d2d7676_.py  f7187aa29326_.py  f8581e1119e8_add_table_visited.py
component/: auth.html  contact.html  footer.html  header.html  page-loader.html  room-history.html  window.js
config/: app_config.json  user_preferences_schema.json
css/: account.css  admin.css  common.css  footer.css  index.css  privacy.css  ranks.css  rooms.css  style.css  top.css  users_manage.css
docs/: guide.md
javascript/: common.js
js/: account.js  agreement_update.js  auth-window.js  auto_update.js  checkserverstatus.js  contact-window.js  index.js  login-btn.js  message.js  ranks.js  room-history.js  rooms.js  table-component.js  top.js  users_manage.js  window-links.js
public/: manifest.json  sw.js  (+3 more)
(+125 files in other folders)
