[package]
name = "hsnpm-notification-service"
version = "0.1.0"
edition = "2021"
description = "HSNPhira房间新增通知服务 - Web-Push和SSE后端"
authors = ["HyperSynapse Network"]
license = "AGPL-3.0"
repository = "https://github.com/HyperSynapseNetwork/HSNPhira"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web-push = "0.11"
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
env_logger = "0.11"
log = "0.4"
uuid = { version = "1.0", features = ["v4"] }
openssl = "0.10"
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio-stream = "0.1"
async-stream = "0.3"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3