[project]
name = "backend"
version = "0.1.0"
description = "HSNPhira backend"
readme = "README.md"
requires-python = "~=3.12.7"
dependencies = [
    "flask==3.1.1",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
